# video-downloader

./: .env  .env.example  .gitignore  README.md  SKILL.md  SKILL.md.backup  SKILL_BILIBILI.md  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  download_agent.py  extract_agent.py
downloaders/: __init__.py  base.py  bilibili.py  douyin.py  kuaishou.py  other.py  xiaohongshu.py  youtube.py
tests/: TESTING.md  check_deps.py  quick_test.py  test_config.py
utils/: __init__.py  file.py
