[project]
name = "video-downloader"
version = "1.0.0"
description = "多平台视频下载和文案提取工具 - 支持抖音、快手、小红书、B站、YouTube等"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "yt-dlp>=2023.12.30",
    "openai>=1.6.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "you-get>=0.4.1743",
    "tqdm>=4.65.0",
]



[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# 自动发现包和模块
py-modules = ["main"]
packages = ["downloaders", "agents", "utils"]

[tool.uv.scripts]
lint = "ruff check ."
format = "ruff format ."
fix = "ruff check --fix ."

[tool.setuptools.package-dir]
"" = "."

# 开发依赖
[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
